[package]
name = "top-hacker-news"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
opt-level = "s"
lto = true
